traffic control draft complete

--- a/html/hosting5.html
+++ b/html/hosting5.html
@@ -470,6 +470,10 @@ programmatically. Automating firewall updates will be an adventure
 for another day.
 </p>
 
+<p>
+October 6, 2025
+</p>
+
         <script src="javascripts/blog_signature.js"></script>
       </section>
     </div>
