--- a/html/blog.html
+++ b/html/blog.html
@@ -631,8 +631,12 @@
               Self-hosting 4: Caring for your webserver</a>
           </li>
           <li>
+            <a href="hosting5.html">
+              Self-hosting 5: Traffic control</a>
+          </li>
+          <li>
             <a href="rss.html">
-              Self-hosting 5: How to start publishing an RSS feed</a>
+              Self-hosting 6: How to start publishing an RSS feed</a>
           </li>
         </ul>          
 
