--- a/html/blog.html
+++ b/html/blog.html
@@ -31,6 +31,59 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <h3>Book Project: DIY Networking</h3>
+        <ul>
+          <li>
+            <a href="hosting.html">
+              Chapter 1: Host your own web server</a>
+          </li>
+          <li>
+            <a href="hosting2.html">
+              Chapter 2: Set up a domain name for your website</a>
+          </li>
+          <li>
+            <a href="hosting3.html">
+              Chapter 3: Make your webserver secure</a>
+          </li>
+          <li>
+            <a href="hosting4.html">
+              Chapter 4: Caring for your webserver</a>
+          </li>
+          <li>
+            <a href="hosting5.html">
+              Chapter 5: Traffic control</a>
+          </li>
+          <li>
+            <a href="hosting6.html">
+              [coming] Chapter 6: Automating traffic control</a>
+          </li>
+          <li>
+            <a href="hosting7.html">
+              [coming] Chapter 7: Make a website that never goes down</a>
+          </li>
+          <li>
+            <a href="rss.html">
+              Chapter 8: How to start publishing an RSS feed</a>
+          </li>
+          <li>
+            <a href="ssh_at_home.html">
+              Chapter 9: Setting up an ssh server</a>
+            Notes from my home hackery.
+          </li>
+          <li>
+            <a href="http_client.html">
+              Chapter 10: Writing a bare-bones HTTP client in Python</a>
+          </li>
+          <li>
+            <a href="http_server.html">
+              Chapter 11: Writing a bare-bones HTTP server in Python</a>
+          </li>
+          <li>
+            <a href="server_naming.html">
+              Appendix A: The word "server" can mean several things</a>
+          </li>
+        </ul>          
+
         <h3>Book project: How to Train Your Robot</h3> 
         <p>
           <a href="https://brandonrohrer.com/httyr"> How to Train Your Robot</a>
@@ -594,51 +647,6 @@
             </a>
           </li>
         </ul>
-
-        <h3>Networking</h3>
-        <ul>
-          <li>
-            <a href="http_client.html">
-              Writing a bare-bones HTTP client in Python</a>
-          </li>
-          <li>
-            <a href="http_server.html">
-              Writing a bare-bones HTTP server in Python</a>
-          </li>
-          <li>
-            <a href="server_naming.html">
-              The word "server" can mean several things</a>
-          </li>
-          <li>
-            <a href="ssh_at_home.html">
-              Setting up an ssh server</a>
-            Notes from my home hackery.
-          </li>
-          <li>
-            <a href="hosting.html">
-              Self-hosting 1: Host your own web server</a>
-          </li>
-          <li>
-            <a href="hosting2.html">
-              Self-hosting 2: Set up a domain name for your website</a>
-          </li>
-          <li>
-            <a href="hosting3.html">
-              Self-hosting 3: Make your webserver secure</a>
-          </li>
-          <li>
-            <a href="hosting4.html">
-              Self-hosting 4: Caring for your webserver</a>
-          </li>
-          <li>
-            <a href="hosting5.html">
-              Self-hosting 5: Traffic control</a>
-          </li>
-          <li>
-            <a href="rss.html">
-              Self-hosting 6: How to start publishing an RSS feed</a>
-          </li>
-        </ul>          
 
         <h3>Unsolicited Advice</h3>
         <ul>
