--- a/html/hosting5.html
+++ b/html/hosting5.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Traffic Control";</script>
-  <script type="text/javascript">var publication_date = "November 01, 2025";</script>
+  <script type="text/javascript">var publication_date = "November 10, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -307,7 +307,9 @@ Crawl-delay: 5
 
 <p>
 Unfortunately, manners are in short supply on the internets, and most
-crawlers and scrapers, including Google, ignores this directive. We can
+crawlers and scrapers, including Google, ignores this directive.
+(<a href="https://www.heise.de/en/background/Obituary-Farewell-to-robots-txt-1994-2025-10766991.html">A cheeky obituary for robots.txt</a>
+declared it died in July 2025.) We can
 resort to more draconian measures and use nginx to implement per-IP rate
 limiting on the webserver.
 </p>
