--- a/html/blog.html
+++ b/html/blog.html
@@ -55,7 +55,7 @@
           </li>
           <li>
             <a href="hosting6.html">
-              [coming] Chapter 6: Automating traffic control</a>
+              Chapter 6: Automating traffic control</a>
           </li>
           <li>
             <a href="hosting7.html">
